--- a/settings.json
+++ b/settings.json
@@ -3,9 +3,9 @@
 "autoplaymusic": true,
 "autocomposing": false,
 "autorecording": true,
-"NamaBot":"𝑭𝒂𝒊𝒓𝒖𝒔𝑩𝒐𝒕𝒛×፝֟͜×", 
-"NomorOwner":"6285649064565",
-"NamaOwner":"𝕱𝖆𝖎𝖗𝖚𝖟𝖟×፝֟͜×", 
+"NamaBot":"L×፝֟͜×", 
+"NomorOwner":"601128654242",
+"NamaOwner":"L×፝֟͜×", 
 "Gopay" : "-",
 "Ovo" : "085804325802",
 "Dana" : "-",
